--- a/ecommerce-frontend/public/manifest.json
+++ b/ecommerce-frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "OrganicFoods",
+  "name": "OrganicFoods - Fresh Organic Foods",
   "icons": [
     {
       "src": "favicon.ico",
